Use S3 and CloudFront for static files

--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -6,7 +6,7 @@
   
   {{> partials/head }}
   
-  <link rel="stylesheet" href="/static/css/frontpage.css" />
+  <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/css/frontpage.css" />
 
 </head>
 
