--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -6,9 +6,9 @@
 
   {{> partials/head }}
 
-  <link rel="stylesheet" href="/static/fonts/Material-Icons-Outlined.css" />
-  <link rel="stylesheet" href="/static/css/album.css" />
-  <link rel="stylesheet" href="/static/css/comments.css" />
+  <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/fonts/Material-Icons-Outlined.css" />
+  <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/css/album.css" />
+  <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/css/comments.css" />
 
 </head>
 
