--- a/views/user.hbs
+++ b/views/user.hbs
@@ -6,8 +6,8 @@
 
   {{> partials/head }}
 
-  <link rel="stylesheet" href="/static/fonts/Material-Icons-Outlined.css" />
-  <link rel="stylesheet" href="/static/css/user.css" />
+  <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/fonts/Material-Icons-Outlined.css" />
+  <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/css/user.css" />
 
 </head>
 
