Switch to S3 static assets

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav>
   <a href="/">
-    <img src="/static/img/rimgo.svg" width="64" height="64" class="logo">
+    <img src="https://d12bxz4wjlvqjb.cloudfront.net/static/img/rimgo.svg" width="64" height="64" class="logo">
   </a>
   <a href="/">
     <h2>rimgo</h2>
