--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -9,7 +9,7 @@
 <link rel="mask-icon" href="https://d12bxz4wjlvqjb.cloudfront.net/static/favicon/safari-pinned-tab.svg" color="#1e88e5">
 <link rel="shortcut icon" href="https://d12bxz4wjlvqjb.cloudfront.net/static/favicon/favicon.ico">
 <meta name="msapplication-TileColor" content="#603cba">
-<meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
+<meta name="msapplication-config" content="https://d12bxz4wjlvqjb.cloudfront.net/static/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
 <link rel="stylesheet" href="https://d12bxz4wjlvqjb.cloudfront.net/static/fonts/Material-Icons-Outlined.css" />
