--- a/static/css/album.css
+++ b/static/css/album.css
@@ -28,5 +28,12 @@ img {
 }
 
 .imageMeta__wrapper {
-  gap: 2rem;
+  gap: 1rem;
+}
+
+.user {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
 }
