--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -21,6 +21,18 @@
     <p>{{album.CreatedAt}}</p>
 
     <div class="imageMeta__wrapper">
+      {{#if album.User}}
+      <div class="user">
+        <a href="/user/{{album.User.Username}}">
+          <img src="{{album.User.Avatar}}" class="pfp" width="36" height="36" loading="lazy" />
+        </a>
+        <a href="/user/{{album.User.Username}}">
+          <p>
+            <b>{{album.User.Username}}</b>
+          </p>
+        </a>
+      </div>
+      {{/if}}
       <div class="imageMeta">
         <div class="imageMeta__item">
           <span class="material-icons-outlined" title="Views">visibility</span>
@@ -31,18 +43,6 @@
         <p><span class="material-icons-outlined" title="Dislilkes">thumb_down</span> {{album.Downvotes}}</p>
         {{/if}}
       </div>
-      <!--<div class="videoDesc__channel">
-        <a href="{{claim.Channel.RelUrl}}">
-          {{#if claim.Channel.Thumbnail}}
-          <img src="{{claim.Channel.Thumbnail}}&w=56&h=56" class="pfp" width="56" height="56" loading="lazy" />
-          {{/if}}
-        </a>
-        <a href="{{claim.Channel.RelUrl}}">
-          <p>
-            <b>{{claim.Channel.Title}}</b>
-          </p>
-        </a>
-      </div>-->
     </div>
 
     <br>
