Use instance domain on frontpage

--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -47,7 +47,7 @@
       <li>Description: Imgur -> rimgo</li>
       <li>Example URL: https://imgur.com/a/H8M4rcp</li>
       <li>Include pattern: <code>^https?://(i|).?imgur.com(/.*)?$</code></li>
-      <li>Redirect to: <code>https://[INSTANCE DOMAIN]$2</code></li>
+      <li>Redirect to: <code>https://{{domain}}$2</code></li>
       <li>Pattern type: Regular Expression</li>
     </ul>
 
